# mizu-inspector

./: LICENSE  README.MD  pyproject.toml  requirements.txt  setup.py
src/: bridge.py  client.py  command.py  constants.py  data.py  message.py  server.py
test/: test_send_message.py
